# noxium

./: .gitignore  Cargo.toml  FEATURES.md  README.md  tsconfig.json
src/: blocker.rs  cdn.rs  cicd.rs  codeanalyzer.rs  containerizer.rs  domchange.rs  hypertextanalysis.rs  jsc.rs  lighthouse.rs  linter.rs  livecompiler.rs  modder.rs  sandboxer.rs  seo-analyze.rs  sessions.rs  ssg.rs  ssr.rs  tsc.rs  vdom.rs
src/@types/: index.d.ts
src/analytics/: cargo.toml  data_analytics.rs  live_processor.rs
src/api/: api.rs
src/api/client/: apiclient.rs  config.toml
src/api/gql/: data.gql  gql.rs
src/api/server/: jsonconfig.yaml
src/bundler/: treeshake.rs
src/database/: msql_client.rs  redis_client.rs  redis_data_handler.rs
src/frontend/: server.rs
src/frontend/frontend/: index.html
src/frontend/frontend2/: index.html
src/frontend/static/: frontend1.js  frontend2.js
src/kubernetes/: autoscaler.rs  autoscaler.yaml  deployment.yaml  ingress.rs  ingress.yaml  service.rs  service.yaml
src/monitor/: blockchain_monitor.rs  data_aggregation.rs  memory_monitor.rs  security_monitor.rs
src/pipelines/: consumer.rs  producer.rs
src/pkg/: main.js
src/server/: dns.rs  middleware.rs  seo.rs  task_queue.rs  webserver.rs
src/template/: main.rs  package.json  render.js
src/template/views/: index.pug
src/templates/: index.html  socketio.html
src/testing/: data.json  server.js  tester.rs
src/utils/: swcutils.rs
src/web/: socketio.rs  websocket.rs
src/wwwroot/: details.rs  parser.rs
