[package]
name = "noxium"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.7"
async-graphql-actix-web = "7.0.7"
actix-web = "4.0"
axum = "0.7.5"
tower = "0.5.0"
ratelimit = "0.9.1"
tokio-util = "0.7"
hyper-rustls = "0.27.2"
mime_guess = "2.0"
askama = "0.12.1"
actix-service = "2.0.2"
regex = "10.12.15"
trust-dns-server = "0.23.2"
web-sys = "0.3.70"
tide = "0.16.0"
actix-files = "0.6.6"
trust-dns-proto = "0.23.2"
socketio = "0.8.0"
trust-dns-client = "0.23.2"
signal-hook = "0.3" 
select = "0.6"
glob = "0.3"
minifier = "0.3.0"
tungstenite = "0.23.0"
clap = "4.5.16"
subprocess = "0.2"
swc_ecmascript = "0.252.0"
swc_common = "0.37.5"
wasmparser = "0.216.0"
wasm-encoder = "0.216.0"
wasm-bindgen = "0.2"
html5ever = "0.28.0"
cssparser = "0.34.0"
notify = "6.1.0"
wasmtime = "24.0.0"
jsonwebtoken = "9.3.0"
url = "2.3"
validator = "0.18.1"
thiserror = "1.0"
anyhow = "1.0"
kuchiki = "0.8"
structopt = "0.3"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio-rustls"] }
dotenv = "0.15"
bcrypt = "0.15.1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
config = "0.14.0"
tokio-tungstenite = "0.23.1"
env_logger = "0.11"
hyper = { version = "1.4.1", features = ["full"] }
reqwest = "0.12.7"
select = "0.8"
luminance = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
warp = "0.3"
rustls = "0.23.12"